feat(auth): add logout resource
