# docs/swagger.yaml
@@ -45,6 +45,15 @@ definitions:
       status:
         type: integer
     type: object
+  common.BaseResponse-string:
+    properties:
+      data:
+        type: string
+      message:
+        type: string
+      status:
+        type: integer
+    type: object
   dto.BookDTO:
     properties:
       author:
@@ -173,6 +182,28 @@ paths:
           schema:
             $ref: '#/definitions/common.BaseResponse-dto_LoginResponse'
       summary: Login User
+      tags:
+      - auth
+  /auth/logout:
+    post:
+      consumes:
+      - application/json
+      description: Logout user
+      parameters:
+      - description: request body for logout user [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RefreshDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.BaseResponse-string'
+      summary: Logout user
       tags:
       - auth
   /auth/refresh:
